force-app/main/default/objects/Court__c/Court__c.object-meta.xml
<CustomObject>
    <label>Court</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Court Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>