force-app/main/default/objects/Court__c/fields/Enforcement_County__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_County__c</fullName>
    <label>Enforcement/County</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enforcement/County</fullName>
            </value>
            <value>
                <fullName>Haldiman County</fullName>
            </value>
            <value>
                <fullName>Regional Municipality of Peel</fullName>
            </value>
            <value>
                <fullName>The City of Greater Sudbury</fullName>
            </value>
            <value>
                <fullName>The City of Hamilton</fullName>
            </value>
            <value>
                <fullName>The City of Kawartha Lakes/Haliburton County</fullName>
            </value>
            <value>
                <fullName>The City of Ottawa</fullName>
            </value>
            <value>
                <fullName>The City of Toronto</fullName>
            </value>
            <value>
                <fullName>The County of Brant</fullName>
            </value>
            <value>
                <fullName>The County of Bruce</fullName>
            </value>
            <value>
                <fullName>The County of Dufferin</fullName>
            </value>
            <value>
                <fullName>The County of Elgin</fullName>
            </value>
            <value>
                <fullName>The County of Essex</fullName>
            </value>
            <value>
                <fullName>The County of Frontenac</fullName>
            </value>
            <value>
                <fullName>The County of Grey</fullName>
            </value>
            <value>
                <fullName>The County of Hastings</fullName>
            </value>
            <value>
                <fullName>The County of Huron</fullName>
            </value>
            <value>
                <fullName>The County of Lambton</fullName>
            </value>
            <value>
                <fullName>The County of Lanark</fullName>
            </value>
            <value>
                <fullName>The County of Lennox &amp; Addington</fullName>
            </value>
            <value>
                <fullName>The County of Middlesex</fullName>
            </value>
            <value>
                <fullName>The County of Norfolk</fullName>
            </value>
            <value>
                <fullName>The County of Northumberland</fullName>
            </value>
            <value>
                <fullName>The County of Oxford</fullName>
            </value>
            <value>
                <fullName>The County of Peterborogh</fullName>
            </value>
            <value>
                <fullName>The County of Prince Edward</fullName>
            </value>
            <value>
                <fullName>The County of Renfrew</fullName>
            </value>
            <value>
                <fullName>The County of Simcoe</fullName>
            </value>
            <value>
                <fullName>The County of Wellington</fullName>
            </value>
            <value>
                <fullName>The County or Perth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>