force-app/main/default/objects/Court__c/fields/Enforcement_County_Address__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_County_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enforcement/County Address</label>
    <type>TextArea</type>
</CustomField>