force-app/main/default/objects/Court__c/fields/Enforcement_County_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Enforcement_County_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enforcement/County Phone Number</label>
    <type>Phone</type>
</CustomField>