force-app/main/default/objects/Court__c/fields/Superior_Court__c.field-meta.xml
<CustomField>
    <fullName>Superior_Court__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Superior Court</label>
    <length>50</length>
    <type>Text</type>
</CustomField>