force-app/main/default/objects/Court__c/fields/Superior_Court_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Superior_Court_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Superior Court Phone Number</label>
    <type>Phone</type>
</CustomField>