force-app/main/default/objects/Court__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Enforcement_County__c</columns>
    <columns>Enforcement_County_Address__c</columns>
    <columns>Enforcement_County_Phone_Number__c</columns>
    <columns>Superior_Court__c</columns>
    <columns>Superior_Court_Address__c</columns>
    <columns>Superior_Court_Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>